fixed responsivity for good (on tablets)

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   max-width: 100%;
-
+  height:100%;
   font-family: sans-serif;
 }
 
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: row;
   margin: 0;
+  flex-wrap: wrap;
 }
 
 main {
